AC_INIT([labrador], [0.1], [chris@lamberson.online])
AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE([foreign subdir-objects])
LT_INIT
LAB_INIT
AC_PROG_CC
AC_CHECK_PROGS([RE2C], [re2c])
PKG_INSTALLDIR
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile labrador.pc])
AC_OUTPUT
